load("@ai_formation_hazel//tools:mangling.bzl", "hazel_library")
load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

package(features = ["-layering_check"])

project()

haskell_library(
    name = "hs-github-tools",
    srcs = glob(["src/**/*.*hs"]),
    compiler_flags = ["-j4"],
    src_strip_prefix = "src",
    version = "0.1.2",
    visibility = ["//visibility:public"],
    deps = [
        hazel_library("QuickCheck"),
        hazel_library("aeson"),
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("containers"),
        hazel_library("cryptohash"),
        hazel_library("exceptions"),
        hazel_library("github"),
        hazel_library("html"),
        hazel_library("http-client"),
        hazel_library("http-client-tls"),
        hazel_library("monad-parallel"),
        hazel_library("quickcheck-text"),
        hazel_library("tabular"),
        hazel_library("text"),
        hazel_library("time"),
        hazel_library("unordered-containers"),
        hazel_library("uuid"),
        hazel_library("vector"),
    ],
)

hspec_test(
    name = "testsuite",
    size = "small",
    args = [
        "-j4",
        "+RTS",
        "-N4",
    ],
    compiler_flags = [
        "-threaded",
        "-rtsopts",
    ],
    deps = [
        ":hs-github-tools",
        hazel_library("QuickCheck"),
        hazel_library("aeson"),
        hazel_library("base"),
        hazel_library("hspec"),
    ],
)
