load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

package(features = ["-layering_check"])

project()

haskell_library(
    name = "github-base",
    srcs = glob([
        "src/GitHub/Types/Base/*.hs",
        "src/GitHub/Types/Base*.hs",
    ]),
    compiler_flags = ["-j4"],
    src_strip_prefix = "src",
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:aeson",
        "//third_party/haskell:base",
        "//third_party/haskell:quickcheck-text",
        "//third_party/haskell:text",
    ],
)

haskell_library(
    name = "github-events",
    srcs = glob([
        "src/GitHub/Types/Events/*.hs",
        "src/GitHub/Types/Event*.hs",
    ]),
    compiler_flags = ["-j4"],
    src_strip_prefix = "src",
    visibility = ["//visibility:public"],
    deps = [
        ":github-base",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:aeson",
        "//third_party/haskell:base",
        "//third_party/haskell:text",
    ],
)

haskell_library(
    name = "hs-github-tools",
    srcs = glob(
        ["src/**/*.*hs"],
        exclude = [
            "src/GitHub/Types/Base/*.hs",
            "src/GitHub/Types/Base*.hs",
            "src/GitHub/Types/Events/*.hs",
            "src/GitHub/Types/Event*.hs",
        ],
    ),
    src_strip_prefix = "src",
    version = "0.1.2",
    visibility = ["//visibility:public"],
    deps = [
        ":github-base",
        ":github-events",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:aeson",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:containers",
        "//third_party/haskell:cryptohash",
        "//third_party/haskell:directory",
        "//third_party/haskell:exceptions",
        "//third_party/haskell:github",
        "//third_party/haskell:html",
        "//third_party/haskell:http-client",
        "//third_party/haskell:http-client-tls",
        "//third_party/haskell:monad-parallel",
        "//third_party/haskell:process",
        "//third_party/haskell:quickcheck-text",
        "//third_party/haskell:split",
        "//third_party/haskell:tabular",
        "//third_party/haskell:text",
        "//third_party/haskell:time",
        "//third_party/haskell:unix",
        "//third_party/haskell:unordered-containers",
        "//third_party/haskell:uuid",
        "//third_party/haskell:vector",
    ],
)

hspec_test(
    name = "testsuite",
    size = "small",
    args = [
        "-j4",
        "+RTS",
        "-N4",
    ],
    compiler_flags = [
        "-threaded",
        "-rtsopts",
    ],
    deps = [
        ":github-base",
        ":github-events",
        ":hs-github-tools",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:aeson",
        "//third_party/haskell:base",
        "//third_party/haskell:hspec",
    ],
)
