name:                github-tools
version:             0.1.1
synopsis:            Various Github helper utilities.
homepage:            https://toktok.github.io/
license:             AGPL-3
license-file:        LICENSE
author:              iphydf
maintainer:          iphydf@users.noreply.github.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10
description:
  - Pull Request status tool.
  - Change log generator.

source-repository head
  type:             git
  location:         https://github.com/TokTok/github-tools.git

library
  exposed-modules:
      Changelogs
      PullRequestInfo
      PullStatus
      Requests
      Review
  ghc-options:
      -Wall
  build-depends:
      base >= 4 && < 5
    , bytestring
    , containers
    , exceptions
    , github            >= 0.15.0
    , groom
    , html
    , http-client       >= 0.4.30
    , http-client-tls
    , monad-parallel
    , tabular
    , tagsoup
    , text
    , time
    , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

executable pull-status
  main-is:             pull-status.hs
  ghc-options:
      -Wall
  build-depends:
      base >= 4 && < 5
    , github-tools
    , bytestring
    , github            >= 0.15.0
  hs-source-dirs:      tools
  default-language:    Haskell2010

executable changelog
  main-is:             changelog.hs
  ghc-options:
      -Wall
  build-depends:
      base >= 4 && < 5
    , github-tools
    , bytestring
    , github            >= 0.15.0
    , text
  hs-source-dirs:      tools
  default-language:    Haskell2010

executable webservice
  main-is:             webservice.hs
  ghc-options:
      -Wall
  build-depends:
      base >= 4 && < 5
    , github-tools
    , aeson
    , bytestring
    , case-insensitive
    , cryptohash
    , github            >= 0.15.0
    , http-types
    , servant
    , servant-server
    , text
    , unordered-containers
    , uuid
    , vector
    , wai
    , wai-extra
    , warp
  hs-source-dirs:      web
  default-language:    Haskell2010
