name:                github-tools
version:             0.1.1
synopsis:            Various Github helper utilities.
homepage:            https://toktok.github.io/
license:             AGPL-3
license-file:        LICENSE
author:              iphydf
maintainer:          iphydf@users.noreply.github.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10
description:
  - Pull Request status tool.
  - Change log generator.

source-repository head
  type:             git
  location:         https://github.com/TokTok/github-tools.git

library
  exposed-modules:
      Changelogs
      GitHub.Types
      GitHub.Types.Base
      GitHub.Types.Base.Author
      GitHub.Types.Base.Branch
      GitHub.Types.Base.Change
      GitHub.Types.Base.Changes
      GitHub.Types.Base.Commit
      GitHub.Types.Base.CommitComment
      GitHub.Types.Base.CommitDetails
      GitHub.Types.Base.CommitRef
      GitHub.Types.Base.CommitRefHtml
      GitHub.Types.Base.DateTime
      GitHub.Types.Base.Deployment
      GitHub.Types.Base.DeploymentStatus
      GitHub.Types.Base.Hook
      GitHub.Types.Base.HookConfig
      GitHub.Types.Base.Invitation
      GitHub.Types.Base.Issue
      GitHub.Types.Base.IssueComment
      GitHub.Types.Base.Label
      GitHub.Types.Base.Link
      GitHub.Types.Base.Membership
      GitHub.Types.Base.Milestone
      GitHub.Types.Base.Organization
      GitHub.Types.Base.PageBuild
      GitHub.Types.Base.PageBuildError
      GitHub.Types.Base.PullRequest
      GitHub.Types.Base.PullRequestLinks
      GitHub.Types.Base.PullRequestRef
      GitHub.Types.Base.PushCommit
      GitHub.Types.Base.Release
      GitHub.Types.Base.RepoOwner
      GitHub.Types.Base.Repository
      GitHub.Types.Base.Review
      GitHub.Types.Base.ReviewComment
      GitHub.Types.Base.ReviewCommentLinks
      GitHub.Types.Base.ReviewLinks
      GitHub.Types.Base.SimplePullRequest
      GitHub.Types.Base.StatusCommit
      GitHub.Types.Base.Team
      GitHub.Types.Base.User
      GitHub.Types.Base.UserRef
      GitHub.Types.Base.UserStamp
      GitHub.Types.Event
      GitHub.Types.Events
      GitHub.Types.Events.CommitCommentEvent
      GitHub.Types.Events.CreateEvent
      GitHub.Types.Events.DeleteEvent
      GitHub.Types.Events.DeploymentEvent
      GitHub.Types.Events.DeploymentStatusEvent
      GitHub.Types.Events.ForkEvent
      GitHub.Types.Events.GollumEvent
      GitHub.Types.Events.IssueCommentEvent
      GitHub.Types.Events.IssuesEvent
      GitHub.Types.Events.LabelEvent
      GitHub.Types.Events.MemberEvent
      GitHub.Types.Events.MembershipEvent
      GitHub.Types.Events.MilestoneEvent
      GitHub.Types.Events.OrganizationEvent
      GitHub.Types.Events.PageBuildEvent
      GitHub.Types.Events.PingEvent
      GitHub.Types.Events.PullRequestEvent
      GitHub.Types.Events.PullRequestReviewCommentEvent
      GitHub.Types.Events.PullRequestReviewEvent
      GitHub.Types.Events.PushEvent
      GitHub.Types.Events.ReleaseEvent
      GitHub.Types.Events.RepositoryEvent
      GitHub.Types.Events.StatusEvent
      GitHub.Types.Events.WatchEvent
      GitHub.Types.PayloadParser
      GitHub.WebHook.Handler
      PullRequestInfo
      PullStatus
      Requests
      Review
  ghc-options:
      -Wall
  build-depends:
      base >= 4 && < 5
    , aeson
    , bytestring
    , containers
    , cryptohash
    , exceptions
    , github            >= 0.15.0
    , groom
    , html
    , http-client       >= 0.4.30
    , http-client-tls
    , monad-parallel
    , QuickCheck
    , quickcheck-text
    , tabular
    , tagsoup
    , text
    , time
    , unordered-containers
    , uuid
    , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hub-pulls
  main-is:             hub-pulls.hs
  ghc-options:
      -Wall
  build-depends:
      base >= 4 && < 5
    , bytestring
    , github            >= 0.15.0
    , github-tools
  hs-source-dirs:      tools
  default-language:    Haskell2010

executable hub-changelog
  main-is:             hub-changelog.hs
  ghc-options:
      -Wall
  build-depends:
      base >= 4 && < 5
    , bytestring
    , github            >= 0.15.0
    , github-tools
    , text
  hs-source-dirs:      tools
  default-language:    Haskell2010

executable hub-roadmap
  main-is:             hub-roadmap.hs
  ghc-options:
      -Wall
  build-depends:
      base >= 4 && < 5
    , bytestring
    , github            >= 0.15.0
    , github-tools
    , text
  hs-source-dirs:      tools
  default-language:    Haskell2010

executable webservice
  main-is:             webservice.hs
  ghc-options:
      -Wall
  build-depends:
      base >= 4 && < 5
    , github-tools
    , aeson
    , bytestring
    , case-insensitive
    , github            >= 0.15.0
    , http-media
    , http-types
    , mtl
    , servant           >= 0.5
    , servant-server    >= 0.5
    , text
    , uuid
    , vector
    , wai
    , wai-extra
    , warp
  hs-source-dirs:      web
  default-language:    Haskell2010
  other-modules:
      TokTok.Hello
      TokTok.Webhooks

test-suite testsuite
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: testsuite.hs
  other-modules:
      GitHub.Types.BaseSpec
      GitHub.Types.EventsSpec
  ghc-options:
      -Wall
      -fno-warn-unused-imports
  build-depends:
      base < 5
    , aeson
    , github-tools
    , hspec
    , QuickCheck
