name:                pull-status
version:             0.1.0
synopsis:            Github Pull Request status tool
homepage:            https://toktok.github.io/
license:             AGPL-3
license-file:        LICENSE
author:              iphydf
maintainer:          iphydf@users.noreply.github.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable pull-status
  main-is:             Main.hs
  ghc-options:
      -Wall
  build-depends:
      base >= 4 && < 5
    , bytestring
    , exceptions
    , github
    , groom
    , http-client
    , http-client-tls
    , tabular
    , tagsoup
    , text
    , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
