sh_test(
    name = "repos_test",
    size = "small",
    srcs = ["@perl"],
    args = [
        "$(location repos_test.pl)",
        "$(location //:.gitmodules)",
        "$(location repos.yaml)",
    ],
    data = [
        "repos.yaml",
        "repos_test.pl",
        "//:.gitmodules",
    ],
)
