load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

[haskell_binary(
    name = file[:-3],
    srcs = [file],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-github-tools",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:github",
        "//third_party/haskell:text",
    ],
) for file in glob(["*.hs"])]
