load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

package(features = ["-layering_check"])

haskell_binary(
    name = "webservice",
    srcs = glob(["**/*.hs"]),
    visibility = ["//visibility:public"],
    deps = [
        "//hs-github-tools",
        "//third_party/haskell:Diff",
        "//third_party/haskell:aeson-pretty",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:case-insensitive",
        "//third_party/haskell:containers",
        "//third_party/haskell:expiring-cache-map",
        "//third_party/haskell:github",
        "//third_party/haskell:http-media",
        "//third_party/haskell:http-types",
        "//third_party/haskell:pretty",
        "//third_party/haskell:servant",
        "//third_party/haskell:servant-server",
        "//third_party/haskell:suspend",
        "//third_party/haskell:text",
        "//third_party/haskell:time",
        "//third_party/haskell:timers",
        "//third_party/haskell:unordered-containers",
        "//third_party/haskell:uuid",
        "//third_party/haskell:wai",
        "//third_party/haskell:wai-cors",
        "//third_party/haskell:wai-extra",
        "//third_party/haskell:warp",
    ],
)
